# ADTOR2025-HRI-GroupG

./: .gitignore  pyproject.toml
src/: face_detector.py  main.py  robot_face_system.py  voice_handler.py
